crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-github-fix-issue-footer.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "fix: handle error\n\nFix #12\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-github-fix-issue-footer.txt
---
Ok:
  ty: fix
  scope: ~
  is_breaking_change: false
  desc: handle error
  body: ""
  footer: "Fix #12"
