crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-github-footer-multiple-lines.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "docs: add platform support\n\nCloses #12\n\nAdd documentation for multiple platforms.\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-github-footer-multiple-lines.txt
---
Ok:
  ty: docs
  scope: ~
  is_breaking_change: false
  desc: add platform support
  body: ""
  footer: "Closes #12\n\nAdd documentation for multiple platforms."
