crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-long-oneline-body.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "fix: handle error\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ligula ante, aliquet ut nibh sit amet, fringilla lacinia mi. Phasellus ornare lectus lectus, sit amet mattis neque interdum eget. Curabitur sollicitudin ante velit, ac facilisis eros tellus.\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-long-oneline-body.txt
---
Ok:
  ty: fix
  scope: ~
  is_breaking_change: false
  desc: handle error
  body: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ligula ante, aliquet ut nibh sit amet, fringilla lacinia mi. Phasellus ornare lectus lectus, sit amet mattis neque interdum eget. Curabitur sollicitudin ante velit, ac facilisis eros tellus."
  footer: ""
