crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc-multiple-newlines-no-body.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "fix: fix error (#123)\n\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc-multiple-newlines-no-body.txt
---
Ok:
  ty: fix
  scope: ~
  is_breaking_change: false
  desc: "fix error (#123)"
  body: ""
  footer: ""
