crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-desc.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "feat: add parser to implementation"
input_file: crates/convcommits-tests/tests/resources/commits/ty-desc.txt
---
Ok:
  ty: feat
  scope: ~
  is_breaking_change: false
  desc: add parser to implementation
  body: ""
  footer: ""
