crates/convcommits-tests/src/snapshots/convcommits_tests__tests__parse_commit_msgs@ty-scope-version-desc.txt.snap
---
source: crates/convcommits-tests/src/lib.rs
expression: "&parsed_msg"
info:
  msg: "docs(v1.0.0): update for release '\"#~! (#123)\n"
input_file: crates/convcommits-tests/tests/resources/commits/ty-scope-version-desc.txt
---
Ok:
  ty: docs
  scope: v1.0.0
  is_breaking_change: false
  desc: "update for release '\"#~! (#123)"
  body: ""
  footer: ""
